--- a/component.library/package.json
+++ b/component.library/package.json
@@ -11,7 +11,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "peerDependencies": {
     "react": "^17.0.2",
     "typescript": "^4.2.4"
   },
