--- a/component.library/package.json
+++ b/component.library/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "component.library",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "watch": "node ./scripts/watch.js",
-    "tsc": "npx tsc --project ./tsconfig.build.json",
-    "babel": "babel src --out-dir dist/lib --copy-files --extensions \".js,.jsx,.ts,.tsx\" --source-maps",
-    "build": "npm run tsc & npm run babel"
-  },
-  "author": "",
-  "license": "ISC",
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "typescript": "^4.2.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.14.0",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/react": "^17.0.4",
-    "npm": "^6.14.7",
-    "prettier": "^2.2.1",
-    "tsc-watch": "^4.2.9"
-  }
+    "name": "react-object-visualizer",
+    "version": "1.0.1",
+    "description": "A react component library to visualize data object in a table format",
+    "main": "object-visualizer.js",
+    "scripts": {
+        "watch": "node ./scripts/watch.js",
+        "tsc": "npx tsc --project ./tsconfig.build.json",
+        "babel": "babel src --out-dir dist/lib --copy-files --extensions \".js,.jsx,.ts,.tsx\" --source-maps",
+        "build": "npm run tsc & npm run babel"
+    },
+    "author": "Meng Tian",
+    "license": "MIT",
+    "peerDependencies": {
+        "react": ">=16.8",
+        "typescript": ">=4.0.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.13.16",
+        "@babel/core": "^7.14.0",
+        "@babel/preset-env": "^7.14.0",
+        "@babel/preset-react": "^7.13.13",
+        "@babel/preset-typescript": "^7.13.0",
+        "@types/react": "^17.0.4",
+        "npm": "^6.14.7",
+        "prettier": "^2.2.1",
+        "tsc-watch": "^4.2.9"
+    }
 }
