--- a/component.library/package.json
+++ b/component.library/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-object-visualizer",
-    "version": "1.0.13",
+    "version": "1.0.14",
     "description": "An extremely light weight react component library to visualize data object in a table format",
     "main": "dist/lib/object-visualizer.js",
     "types": "dist/lib/object-visualizer.d.ts",
@@ -22,8 +22,7 @@
     "author": "Meng Tian",
     "license": "MIT",
     "peerDependencies": {
-        "react": ">=16.8",
-        "typescript": ">=4.0.0"
+        "react": ">=16.8"
     },
     "devDependencies": {
         "@babel/cli": "^7.13.16",
